<resources>
    <string name="app_name">FoodLovers</string>
    <string name="enter_your_recipe_name">Enter your Recipe Name</string>
    <string name="enter_recipe_instructions">Enter Recipe Instructions</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_instructions">Recipe Instructions</string>
    <string name="update">Update</string>
    <string name="log_in">Log in</string>
    <string name="sing_up">Sing Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings :</string>
    <string name="language">Language</string>
    <string name="singout">SingOut</string>
    <string name="Enter_recipe_name_and_instruction">Enter recipe name,instruction and image</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="you_have_created_new_account_successfully">You\'ve created new account Successfully</string>
    <string name="login_is_successfully">Login Successfully</string>
    <string name="must_be_filled">must be filled</string>
    <string name="add_recipe">Add recipe</string>
    <string name="recipe_added_successfully">\"Recipe Added successfully \"</string>
    <string name="there_are_no_changes">There are no changes</string>
    <string name="user_name">User Name</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="Choose_language">Choose Language</string>
    <string name="ok">ok</string>
    <string name="more_info">more info..</string>
    <string name="explore">Explore</string>
    <string name="myRecipe">MyRecipe</string>
    <string name="userProfile">Profile</string>
    <string name="UserName">user name :</string>
    <string name="Emile">Emile :</string>
    <string name="newReipe">newRecipe</string>
    <string name="Explore">Explore</string>
    <string name="MyRecipe">MyRecipe</string>
    <string name="EditRecipe">EditRecipe</string>
    <string name="Profile">Profile</string>
    <string name="forgot_Password">Forgot password</string>
    <string name="enter_your_email_forgot">Enter your Email</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="addrecipe">AddRecipe</string>
    <string name="no_recipe">No Recipes</string>
    <string name="no_result_found">No Result Found</string>
</resources>