<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/food1">



    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        android:background="@color/beige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:background="@color/light_gray"
            android:orientation="vertical"/>

        <LinearLayout
            android:id="@+id/profile"
            android:background="@color/light_gray"
            android:padding="25dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Name"
                android:gravity="center_vertical"
                android:background="@drawable/raduis"
                android:textColor="#474646"
                android:textSize="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp" />
            <TextView
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:gravity="center_vertical"
                android:background="@drawable/raduis"
                android:textColor="#474646"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp" />

            <LinearLayout
                android:id="@+id/logInLayout"
                android:background="@color/light_gray"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:textSize="25dp"
                    android:textColor="#474646" />
               <Button
               android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_textview"
                android:layout_marginTop="25dp"
                android:text="@string/language"
                   android:textSize="18dp"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@color/light_gray"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/sing_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/singout"
                    android:textSize="25dp"
                    android:textColor="#474646"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>