<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/newB"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:context=".recipe.ui.EditFragment">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="159dp"
            android:layout_height="186dp"
            android:layout_marginStart="-11dp"
            android:layout_marginBottom="564dp"
            android:src="@drawable/splash_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="190dp"
            android:layout_height="390dp"
            android:layout_marginStart="245dp"
            android:layout_marginBottom="-15dp"
            android:src="@drawable/splash_two"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="-500dp"
            android:background="@color/light_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editRecipeName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/raduis"
                android:hint="@string/recipe_name"
                android:textSize="20dp"
                android:fontFamily="@font/adamina"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="370dp"
            android:layout_height="300dp"
            android:layout_marginTop="-70dp"
            android:background="@color/light_gray"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editRecipeInstructions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/raduis"
                android:gravity="top"
                android:hint="@string/recipe_instructions"
                android:textSize="25dp"
                android:fontFamily="@font/adamina"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/updateButton"
            android:layout_width="145dp"
            android:layout_height="80dp"
            android:backgroundTint="@color/blue"
            android:layout_marginLeft="-22dp"
            android:layout_marginRight="150dp"
            android:layout_marginTop="-11dp"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="@font/adamina"
            android:textStyle="bold"
            app:shapeAppearanceOverlay="@style/Button4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"/>

        <Button
            android:id="@+id/cancellButton"
            android:layout_width="145dp"
            android:layout_height="80dp"
            android:layout_marginTop="-11dp"
            android:layout_marginLeft="33dp"
            android:backgroundTint="@color/blue"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:fontFamily="@font/adamina"
            android:textStyle="bold"
            android:layout_marginRight="-150dp"
            app:shapeAppearanceOverlay="@style/Button4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
