<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/food1">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="130dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        app:cardUseCompatPadding="true"
        android:background="@color/darkB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">

        <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="2"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

         <TextView
                android:id="@+id/logIn"
                android:text="@string/log_in"
                android:paddingTop="5dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:fontFamily="@font/adamina"
                android:textStyle="bold|normal"
                android:background="@drawable/switch_trcks"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

          <TextView
               android:id="@+id/singUp"
               android:text="@string/sing_up"
               android:paddingTop="5dp"
               android:textAlignment="center"
               android:textColor="@color/black"
               android:textSize="12sp"
               android:layout_gravity="center"
               android:gravity="center"
               android:paddingBottom="5dp"
               android:paddingRight="15dp"
               android:paddingLeft="15dp"
               android:textStyle="bold|normal"
               android:fontFamily="@font/adamina"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="wrap_content"/>

            </LinearLayout>

        <LinearLayout
                android:id="@+id/logInLayout"
                android:background="@color/light_gray"
                android:padding="25dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/email"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                app:shapeAppearanceOverlay="@style/Button4"
                app:hintTextColor="#4E4A4A"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                android:background="@color/light_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/login_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textEmailAddress"
                 android:minHeight="48dp"
                 android:textColor="@color/black"
                 android:textSize="13sp"
                 android:textStyle="normal" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                  android:hint="@string/password"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_marginTop="5dp"
                  app:shapeAppearanceOverlay="@style/Button4"
                  app:hintTextColor="#4E4A4A"
                  app:boxStrokeColor="#4E4A4A"
                  app:boxStrokeWidth="1dp"
                  android:background="@color/light_gray"
                  app:endIconMode="password_toggle"
                  style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                   android:inputType="textPassword"
                   android:id="@+id/login_password"
                   android:ems="10"
                   android:textSize="13sp"
                   android:textColor="@color/black"
                   android:textStyle="normal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgot"
                    android:textSize="9sp"
                    android:text="@string/forgot_password"
                    android:textAlignment="textEnd"
                    android:textColor="#4E4A4A"
                    android:textStyle="normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="95dp"
                    android:layout_marginRight="30dp"/>

                <Button
                    android:id="@+id/singIn"
                    android:text="@string/log_in"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    app:shapeAppearanceOverlay="@style/Button5"
                    app:backgroundTint="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:background="@color/light_gray"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animationView"
                        android:layout_width="match_parent"
                        android:layout_height="90dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:lottie_loop="true"
                        app:lottie_autoPlay="true"
                        app:lottie_rawRes="@raw/animation_food"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/singUpLayout"
                android:background="@color/light_gray"
                android:padding="25dp"
                android:visibility="gone"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/user_name"
                app:shapeAppearanceOverlay="@style/Button4"
                android:textColorHint="#4E4A4A"
                app:boxStrokeColor="#4E4A4A"
                app:boxStrokeWidth="1dp"
                android:background="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName"
            android:id="@+id/Name"
            android:ems="10"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:hint="@string/email"
           android:layout_marginLeft="5dp"
           android:layout_marginRight="5dp"
           android:layout_marginTop="7dp"
           app:shapeAppearanceOverlay="@style/Button4"
           app:hintTextColor="#4E4A4A"
           app:boxStrokeColor="#4E4A4A"
           app:boxStrokeWidth="1dp"
           android:background="@color/white"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

       <com.google.android.material.textfield.TextInputEditText
          android:inputType="textEmailAddress"
          android:id="@+id/singup_email"
          android:ems="10"
          android:textSize="13sp"
          android:textColor="@color/black"
          android:textStyle="normal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/password"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="9dp"
            app:shapeAppearanceOverlay="@style/Button4"
            app:hintTextColor="#4E4A4A"
            app:boxStrokeColor="#4E4A4A"
            app:boxStrokeWidth="1dp"
            android:background="@color/white"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

       <com.google.android.material.textfield.TextInputEditText
             android:inputType="textPassword"
             android:id="@+id/singup_passwords"
             android:ems="10"
             android:textSize="13sp"
             android:textColor="@color/black"
             android:textStyle="normal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
              android:hint="@string/confirm_password"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:layout_marginTop="11dp"
              app:shapeAppearanceOverlay="@style/Button4"
              app:hintTextColor="#4E4A4A"
              app:boxStrokeColor="#4E4A4A"
              app:boxStrokeWidth="1dp"
              android:background="@color/white"
              app:endIconMode="password_toggle"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

       <com.google.android.material.textfield.TextInputEditText
               android:inputType="textPassword"
               android:id="@+id/singUp_password_conf"
               android:ems="10"
               android:textSize="13sp"
               android:textColor="@color/black"
               android:textStyle="normal"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

       </com.google.android.material.textfield.TextInputLayout>

                <Button
                android:id="@+id/sing_Up"
                android:text="@string/sing_up"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                app:shapeAppearanceOverlay="@style/Button5"
                app:backgroundTint="@color/white"
                android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>